# python-interactive-dispatcher

./: CHANGELOG.md  README.md  example.py  pyproject.toml  setup.cfg
interactive_dispatcher/: __init__.py  interactive_dispatcher.py
