[metadata]
name = interactive-dispatcher
version = 0.1.0
author = Akhand Pratap Tiwari
description = A customizable interactive CLI menu dispatcher with extendable return signals and matching function calls.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Akhand-Pratap-Tiwari/python-interactive-dispatcher
license = Apache License 2.0
license_files = LICENSE
keywords = cli, menu, dispatcher, return-signal, customizable, interactive, function-calls

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: User Interfaces
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.extras_require]
dev =
    pytest
    mypy
    black